<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2014. Jason Esposito
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<resources>

    <string name="HomeSection">Home</string>
    <string name="AddPlayerSection">Add Player</string>
    <string name="PlaySection">Play</string>
    <string name="ViewPlayerSection">View Player</string>
    <string name="app_name">TurnOrder</string>
    
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="cnt_mnu_removedSpell"> Use Spell Point</string>
    <string name="cnt_mnu_addSpell"> Gain Spell Point</string>


    <string name="cnt_mnu_removedWound"> Heal One Wound</string>
    <string name="cnt_mnu_addWound"> Take One Wound</string>

    <string name="cnt_mnu_removedBennie"> Use Bennie</string>
    <string name="cnt_mnu_addBennie"> Gain Bennie</string>


</resources>
